--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="css/style.css"/>
   </head>
   <div class="container">
-      <H1 id="location">Hier is mijn lokatie</H1>
+      <H1 id="location">Hier is mijn locatie</H1>
       <div class="image">
+        <div class="treasure">
+          <img id="treasure" src= "" width="100" alt="">
+          </div>
           <img id="imageLocation" src="" width="600" alt="">
       </div>
         <div id="description">dit is de omschrijving</div>
